# HASTE

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  elsarticle-template-num.tex  pyproject.toml  requirements.txt  train.py
configs/: mpddf.yaml  sadt.yaml  seedvig.yaml
data/: __init__.py  mpddf.py  preprocessing.py  sadt.py  seedvig.py
models/: __init__.py  adjacency.py  blocks.py  hast.py
scripts/: evaluate.sh  run_all_folds.sh  train_mpddf.sh  train_sadt.sh  train_seedvig.sh
tests/: conftest.py  test_config.py  test_data.py  test_model.py
